@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-18T00:39:18Z",
+  "timestamp" : "2022-05-18T08:12:36Z",
   "count_outdated" : 81,
   "uniques_outdated" : 5,
-  "count" : 352,
-  "uniques" : 16,
+  "count" : 358,
+  "uniques" : 17,
   "views" : [
     {
       "timestamp": "2022-05-04T00:00:00Z",
@@ -79,6 +79,13 @@
       "timestamp": "2022-05-17T00:00:00Z",
       "count": 21,
       "count_minmax": [ 11, 21 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-18T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
