@@ -1,5 +1,5 @@
 {
-  "count": 271,
+  "count": 277,
   "uniques": 1,
   "views": [
     {
@@ -55,6 +55,11 @@
     {
       "timestamp": "2022-05-17T00:00:00Z",
       "count": 21,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-18T00:00:00Z",
+      "count": 6,
       "uniques": 1
     }
   ]
