@@ -1,3 +1,10 @@
+2022-05-18T08:12:36Z:
+* notice: last 14d: all unq: 277 1
+* notice: prev accum: outdated-all outdated-unq / all unq: 81 5 / 352 16
+* notice: next accum: outdated-all outdated-unq / all unq: 81 5 / 358 17
+* notice: prev exec diff / last date diff / accum: unq all: +1 +6 -0 -0 / +1 +6 -0 -0 / 1 6
+* notice: changed dates: [2022-05-18]
+
 2022-05-18T00:39:18Z:
 * notice: last 14d: all unq: 271 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 65 4 / 365 16
